--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,84 @@
-dill==0.3.6
+anyio==3.7.0
+appdirs==1.4.4
+astor==0.8.1
+asttokens==2.2.1
+astunparse==1.6.3
+backcall==0.2.0
+blinker==1.4
+brotlipy==0.7.0
+colorama==0.4.6
+comm==0.1.3
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+exceptiongroup==1.1.1
+executing==1.2.0
+fastapi==0.96.0
+flatbuffers==1.12
+fonttools==4.39.3
+google-auth==2.17.3
+google-auth-oauthlib==0.4.6
+grpcio==1.54.0
+h11==0.14.0
+importlib-metadata==6.2.1
+importlib-resources==5.12.0
+ipykernel==6.22.0
+ipython==8.12.0
+jax==0.4.8
+jedi==0.18.2
+joblib==1.2.0
+jupyter_client==8.1.0
+jupyter_core==5.3.0
+keras==2.9.0
+kiwisolver==1.4.4
+libclang==16.0.0
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mkl-fft==1.3.6
+mkl-service==2.4.0
+ml-dtypes==0.1.0
+nest-asyncio==1.5.6
+numpy==1.23.5
+packaging==20.9
+pandas==2.0.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.2.0
+plotly==5.14.1
+prompt-toolkit==3.0.38
+protobuf==3.20.0
+psutil==5.9.4
+pure-eval==0.2.2
+pyasn1-modules==0.2.8
+pydantic==1.10.9
+Pygments==2.14.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+pywin32==306
+pyzmq==25.0.2
+requests-oauthlib==1.3.0
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+sniffio==1.3.0
+stack-data==0.6.2
+starlette==0.27.0
+tenacity==8.2.2
+tensorboard==2.9.0
+tensorboard-data-server==0.6.1
+tensorflow==2.9.0
+tensorflow-estimator==2.9.0
+tensorflow-hub==0.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+threadpoolctl==3.1.0
+tornado==6.2
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+uvicorn==0.22.0
+wcwidth==0.2.6
+zipp==3.15.0
